2010-04-01 Zoran Vasiljevic <zv@archiware.com>

        * tclXkeylist.c: Removed declaration of global keyl* commands

2010-03-30 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.6 TAGGED FOR RELEASE (thread-2-6-6) ***

	* configure               Redo for TEA 3.7
	* configure.in

	* generic/tclThread.h     Cosmetic changes for the inclusion
	* generic/threadCmd.c     in standard Tcl distribution.
	* generic/threadPoolCmd.c
	* generic/threadSpCmd.c
	* generic/threadSvCmd.c
	* generic/threadSvCmd.h

2010-03-19   Jan Nijtmans <nijtmans@users.sourceforge.net>
	
        * generic/threadSpCmd.c    Silence gcc warning: dereferencing type-punned
        * .cvsignore               pointer will break strict-aliasing rules
        * configure                Regenerated using latest TEA

2009-08-19 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Implemented [tpool::suspend]
	* doc/tpool.man:           and [tpool::resume] commands
	                           as per RFE #2835615.
	                           Also fixed Bug #2833864.
 
2009-07-22   Jan Nijtmans <nijtmans@users.sourceforge.net>
	
	* generic/tclThread.h:   Remove unnecessary ';'s
	* generic/tclXkeylist.c: Constify remaining of thread extension,
	* generic/tclXkeylist.h: bringing it at the same level as Tcl 8.6
	* generic/threadCmd.c
	* generic/threadPoolCmd.c
	* generic/threadSpCmd.c
	* generic/threadSvCmd.c
	* generic/threadSvCmd.h
	* generic/threadSvKeylistCmd.c
	* generic/threadSvKeylistCmd.h
	* generic/threadSvListCmd.c
	
2009-07-16   Alexandre Ferrieux <ferrieux@sourceforge.net>
	
	* generic/tclXkeylist.c: Constify Tcl_ObjGetType return values to
	* generic/threadSvCmd.c: get rid of const warnings; #if 0 of
	* generic/threadSvCmd.h: SvFinalize which is unused.
	
2009-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/vc/makefile.vc: Updated the MSVC build to work with MSCV 8
	* win/vc/rules.vc:    and 9 on both intel and amd64 targets.
	* win/vc/nmakehlp.c:
